k8s/namespaces.yaml
apiVersion: v1
kind: Namespace
metadata:
  name: student
---
apiVersion: v1
kind: Namespace
metadata:
  name: faculty
