k8s/faculty-deployment.yaml
apiVersion: apps/v1
kind: Deployment
metadata:
  name: faculty-app
  namespace: faculty
spec:
  replicas: 1
  selector:
    matchLabels:
      app: faculty-app
  template:
    metadata:
      labels:
        app: faculty-app
    spec:
      containers:
        - name: faculty-app
          image: faculty-app:1.0
          imagePullPolicy: Never
          ports:
            - containerPort: 8082
---
apiVersion: v1
kind: Service
metadata:
  name: faculty-service
  namespace: faculty
spec:
  selector:
    app: faculty-app
  ports:
    - port: 8082
      targetPort: 8082
