k8s/student-deployment.yaml
apiVersion: apps/v1
kind: Deployment
metadata:
  name: student-app
  namespace: student
spec:
  replicas: 1
  selector:
    matchLabels:
      app: student-app
  template:
    metadata:
      labels:
        app: student-app
    spec:
      containers:
        - name: student-app
          image: student-app:1.0
          imagePullPolicy: Never
          ports:
            - containerPort: 8081
---
apiVersion: v1
kind: Service
metadata:
  name: student-service
  namespace: student
spec:
  selector:
    app: student-app
  ports:
    - port: 8081
      targetPort: 8081
